# sef_roboter_pick_and_place

./: README.md
control_plugin /: CMakeLists.txt  CMakeLists.txt.user.b3b070b  package.xml  plugin_description.xml
control_plugin /src/: panel.cpp  panel.h
gripper_urdf/: CMakeLists.txt  package.xml
gripper_urdf/launch/: gripper.launch
gripper_urdf/meshes/: body_without_fingers.stl  finger_1_base.stl  finger_2_base.stl  main.stl
gripper_urdf/urdf/: gripper.urdf  gripper.xacro  gripper_macro.xacro
grippet_test/: .setup_assistant  CMakeLists.txt  package.xml
grippet_test/config/: SCHUNK_64NNB.srdf  ros_controllers.yaml
grippet_test/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
sef_pick_place /: CMakeLists.txt  package.xml
sef_pick_place /src/: sef_pick_place.cpp
sef_roboter_gazebo/config/: ros_control_gains.yaml
sef_roboter_gazebo/launch/: sef_roboter_world.launch
sef_roboter_gazebo/worlds/: sr25.world
sef_roboter_moveit_config/launch/: moveit.rviz
sef_roboter_moveit_gripper/: .setup_assistant  CMakeLists.txt  package.xml
sef_roboter_moveit_gripper/config/: SCHUNK_64NNB.srdf  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  joint_names.yaml
sef_roboter_moveit_gripper/launch/: SCHUNK_64NNB_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  demo_planning_execution.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
sef_roboter_ros_control/config/: joint_trajectory_simulation_controllers.yaml
sef_roboter_ros_control/launch/: gazebo.launch
sef_roboter_support/launch/: display.launch
sef_roboter_support/meshes/sr25/collision/: link_1.stl
sef_roboter_support/urdf/: sr25.gazebo  sr25.urdf  sr25.xacro  sr25_claw.urdf  sr25_claw.urdf.xacro  sr25_macro.xacro
visualization_tutorials/: CMakeLists.txt  package.xml
visualization_tutorials/src/: basic_controls.cpp
