<?xml version="1.0"?>
<package format="2">
  <name>visualization_tutorials</name>
  <version>0.0.0</version>
  <description>The visualization_tutorials package</description>
  <maintainer email="riky@todo.todo">riky</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf</exec_depend>


</package>
